# attach_shelf

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml  rviz.launch.py
attach_shelf/rviz/: default.config.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
attach_shelf_interface/: CMakeLists.txt  package.xml
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: attach_client.hpp  attach_server.hpp  pre_approach.hpp
my_components/launch/: attach_to_shelf.launch.py
my_components/src/: approach_service_server.cpp  attach_client.cpp  attach_server.cpp  pre_approach.cpp
